--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit==1.28.0
-pandas==2.1.0
-numpy==1.24.3
-matplotlib==3.7.2
-seaborn==0.12.2
-openpyxl==3.1.2
-python-pptx==0.6.21
-xlrd==2.0.1  # For reading .xls files
-XlsxWriter==3.1.2
-Pillow==10.0.1
+streamlit==1.22.0
+pandas==1.5.0
+numpy==1.21.0
+matplotlib==3.5.0
+seaborn==0.11.0
+openpyxl==3.0.0
+python-pptx==0.6.19
+xlrd==2.0.0
+XlsxWriter==3.0.0
+Pillow==9.0.0
